# wordworx

./: COPYING  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.am.old  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac~  configure.scan
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  output.7  output.8  output.9  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8  traces.9
hiscore/: Makefile  Makefile.am  Makefile.in  hiscore.c  hsnet.c
hiscore/.deps/: hiscore.Po  hsnet.Po
m4/: check_zlib.m4  reauto.sh  zdll.m4
sdlallegro/: ChangeLog  Makefile  Makefile.am  Makefile.in  sa_joystick.c  sa_prims.c  sa_sdlimage.c  sa_timer.c  sdl_allegro.c  sdl_allegro.h
sdlallegro/.deps/: sa_joystick.Po  sa_prims.Po  sa_sdlimage.Po  sa_timer.Po  sdl_allegro.Po
src/: Makefile  Makefile.am  Makefile.am.old  Makefile.in  ai.c  dfilepath.c  dict.c  gfx.c  main.c  tiledata.h  wwtypes.h
src/.deps/: ai.Po  dfilepath.Po  dict.Po  gfx.Po  hiscore.Po  main.Po  sdl_allegro.Po  tiles.Po
src/share/wordworx/dict/: dict_AA  dict_AB  dict_AC  dict_AD  dict_AE  dict_AF  dict_AG  dict_AH  dict_AI  dict_AJ  dict_AK  dict_AL  dict_AM  dict_AN  dict_AO  dict_AP  dict_AQ  dict_AR  dict_AS  dict_AT  dict_AU  dict_AV  dict_AW  dict_AX  dict_AY  dict_AZ  dict_BA  dict_BD  dict_BE  dict_BH  dict_BI  dict_BL  dict_BO  dict_BR  dict_BU  dict_BW  dict_BY  dict_CA  dict_CE  dict_CH  (+308 more)
src/share/wordworx/gfx/: banner.pcx  gears.pcx  scrabble.pcx  scrabblehd.pcx  scrabblehd.xcf  vicons.pcx  wordlist.pcx  wwbg.pcx  wwbghd.pcx  wwbghd_org.pcx
src/share/wordworx/hs/: hsnet.txt  scores.dat-dstb  scores.dat-not
src/share/wordworx/icons/: icon32.xpm
src/share/wordworx/zdict/: dict_AA  dict_AB  dict_AC  dict_AD  dict_AE  dict_AF  dict_AG  dict_AH  dict_AI  dict_AJ  dict_AK  dict_AL  dict_AM  dict_AN  dict_AO  dict_AP  dict_AQ  dict_AR  dict_AS  dict_AT  dict_AU  dict_AV  dict_AW  dict_AX  dict_AY  dict_AZ  dict_BA  dict_BD  dict_BE  dict_BH  dict_BI  dict_BL  dict_BO  dict_BR  dict_BU  dict_BW  dict_BY  dict_CA  dict_CE  dict_CH  (+311 more)
tests/: README  test.c  test2.c  testdate.c  testz.c
widget/: ChangeLog  Makefile  Makefile.am  Makefile.in  TODO  build.sh  button.c  button.h  font.c  font.h  font_legacy.c  font_legacy.h  fontdata.h  input.c  keyboard.c  style.c  widget.c  widget.h  window.c  window.h
widget/.deps/: button.Po  font.Po  input.Po  keyboard.Po  style.Po  widget.Po  window.Po
